--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     // Initialize EmailJS with your public key
     (function() {
-      emailjs.init("WFyfWf1iLGMxvS-i8"); // Replace with your actual public key
+      emailjs.init("WFyfWf1iLGMxvS-i8"); // 
     })();
   </script>
   <script defer src="script.js"></script>
