Push site to GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button class="filter-btn active" onclick="filterCards('All')">All</button>
     <button class="filter-btn" onclick="filterCards('STEM')">STEM</button>
     <button class="filter-btn" onclick="filterCards('Stolen by Men')">Stolen by Men</button>
-    <button class="filter-btn" onclick="filterCards('Global Resistance')">Global Resistance</button>
+    <button class="filter-btn" onclick="filterCards('Public figures')">Global Resistance</button>
   </section>
 
   <section class="search-bar">
